[package]
name = "vm-inspector"
version = "0.1.0"
authors = ["Garry Xu <garry.x@outlook.com>"]
edition = "2021"
description = "Tool helping to analyse the behaviors for a VM."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }